syntax = "proto3";

option csharp_namespace = "ProductGrpc.Service.Protos";

service ProductProtoService {
	rpc GetProduct(GetProductRequest) returns (ProductModel);

	rpc GetAllProducts (GetAllProductsRequest) return (stream ProductModel);

	rpc AddProduct (AddProductRequest) returns (ProductModel);

	rpc UpdateProduct (UpdateProductRequest) returns (ProductModel);

	rpc DeleteProduct (DeleteProductRequest) return (DeleteProductResponse);

	rpc InsertBulkProduct (stream ProductModel) returns (InsertBulkProductResponse);

	rpc Test (google.protobuf.empty) returns (google.potobuf.empty);
}

message GetProductRequest {
	int32 productId =1;
}

message GetAllProductRequest {

}

message AddProductRequest {
	productModel product = 1;
}